# wp-station

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  coverage.sh
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  dependabot-branch-filter.yml  release.yml
_gal/: adm.gxl  ver.gxl  vfm.gxl  work.gxl
config/: config.toml
crates/gitea/: Cargo.toml
crates/gitea/src/: lib.rs
crates/gitea/src/git/: client.rs  gitea_api.rs  local_repo.rs  repository.rs  types.rs  util.rs
crates/migrations/: Cargo.toml  README.md
crates/migrations/src/: lib.rs  m20250101_000001_create_tables.rs  m20260428_000002_add_release_group.rs
crates/migrations/src/entity/: assist_task.rs  device.rs  knowledge_config.rs  mod.rs  operation_log.rs  performance.rs  release.rs  release_target.rs  rule_config.rs  sandbox_run.rs  user.rs
default_configs/conf/: wpgen.toml
dev-ops/docker/: .env  .env.example  docker-compose-beta.yml  docker-compose.yml  start.sh
dev-ops/scripts/: compose-common.sh
docker/: .env.example  docker-compose.yml
src/: error.rs  lib.rs  main.rs
src/api/: assist_task.rs  config.rs  debug.rs  device.rs  knowledge.rs  mod.rs  operation_log.rs  project.rs  release.rs  rules.rs  sandbox.rs  system.rs  user.rs
src/db/: assist_task.rs  default_rules_loader.rs  device.rs  knowledge_config.rs  mod.rs  operation_log.rs  performance.rs  pool_manager.rs  release.rs  release_group.rs  release_target.rs  rule_config.rs  rule_type.rs  sandbox.rs  user.rs
src/server/: app.rs  assist_task.rs  config.rs  debug.rs  device.rs  knowledge.rs  mod.rs  operation_log.rs  project.rs  release.rs  release_task_runner.rs  rules.rs  sandbox.rs  sandbox_analyzer.rs  sandbox_diagnostics.rs  sandbox_runner.rs  setting.rs  sync.rs  system.rs  user.rs
src/utils/: assist_service.rs  check.rs  common.rs  constants.rs  health_check.rs  knowledge.rs  mod.rs  oml.rs  pagination.rs  process_guard.rs  project.rs  project_check.rs  sandbox.rs  sandbox_workspace.rs  warparse_service.rs  wpl.rs
tasks/: 2026-04-13_1_rule-knowledge-file-only.md  2026-04-15_1_performance-test-page-design.md
tests/: mod.rs
tests/api/: assist_test.rs  config_test.rs  debug_test.rs  device_test.rs  mod.rs  operation_log_test.rs  release_test.rs  rules_test.rs  system_test.rs  user_test.rs
tests/common/: mod.rs
tests/db/: assist_task_test.rs  default_rules_test.rs  device_test.rs  knowledge_config_test.rs  mod.rs  operation_log_test.rs  performance_test.rs  pool_manager_test.rs  release_test.rs  rule_config_test.rs  user_test.rs
tests/server/: assist_logic_test.rs  mod.rs  release_logic_test.rs  rules_test.rs  setting_test.rs  user_logic_test.rs
tests/utils/: knowledge_test.rs  mod.rs  (+6 more)
web/: .gitignore  .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+127 files in other folders)
