[package]
name = "gitea"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[lib]
name = "gitea"
path = "src/lib.rs"

